--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -110,96 +110,141 @@
                         >Haz tu cita</a
                       >
                     </div>
-                    <!--Termina el segundo servicio------------------------------------------------------------------->
-                    <!--Inicia el tercer servicio--------------------------------------------------------------------->
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" alt="Mega-Volumen" src="/assets/serviciosImg/megavolumen.jpg"
-                                data-holder-rendered="true" style="width: 100%; display: block;">
-                            <div id="servicios-card" class="card-body">
-                                <h3 id="titulo2">Técnica Volumen ligero </h3>
-                                <h6 id="titulo2">Precio $650</h6>
-                                <p id="titulo2" class="card-text">Recomendado para personas con pestaña escasa que
-                                    busquen resultados llamativos. También a personas con pestañas normalmente pobladas
-                                    que busquen profundamente en la mirada.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div id="Botones"  class="btn-group">
-                                        <a id="titulo2" class="btn btn-outline-dark" href="cita.html">Haz tu
-                                            cita</a>
-                                        <button id="titulo2" type="button" class="btn btn-sm btn-dark">Tiempo estimado 3
-                                            hrs.</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Termina el tercer servicio---------------------------------------------------------------------->
-                    <!--Inicia el cuarto servicio---------------------------------------------------------------------->
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" alt="Mega" src="/assets/serviciosImg/mega-volumen.jpg"
-                                data-holder-rendered="true" style="width: 100%; display: block;">
-                            <div id="servicios-card" class="card-body">
-                                <h3 id="titulo2">Técnica Mega-Volumen</h3>
-                                <h6 id="titulo2">Precio $800</h6>
-                                <p id="titulo2" class="card-text">Recomendado para personas que busquen resultados
-                                    dramáticos. Si lo que quieres son efectos especiales o colores, esta es tu técnica
-                                    .</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div id="Botones" class="btn-group">
-                                        <a id="titulo2" class="btn btn-outline-dark" href="cita.html">Haz tu
-                                            cita</a>
-                                        <button id="titulo2" type="button" class="btn btn-sm btn-dark">Tiempo estimado 3
-                                            hrs.</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" alt="Retiro de pestañas" src="/assets/serviciosImg/retiro.jpg"
-                                data-holder-rendered="true" style="width: 100%; display: block;">
-                            <div id="servicios-card" class="card-body">
-                                <h3 id="titulo2">Retiro de pestañas</h3>
-                                <h6 id="titulo2">Precio $180</h6>
-                                <p id="titulo2" class="card-text">Si buscas descansar de las extensiones, la mejor manera
-                                    es con un retiro profesional, que cuide la piel de tus ojos y la estructura de tu
-                                    pestaña natural.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div id="Botones"  class="btn-group">
-                                        <a id="titulo2" class="btn btn-outline-dark" href="cita.html">Haz tu
-                                            cita</a>
-                                        <button id="titulo2" type="button" class="btn btn-sm btn-dark">Tiempo estimado 1.5
-                                            hrs</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Termina el cuarto servicio----------------------------------------------------------------->
-                    <!--Inicia el quinto servicio-------------------------------------------------------->
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" alt="Retoque de pestañas" src="/assets/serviciosImg/retoque.jpg"
-                                data-holder-rendered="true" style="width: 100%; display: block;">
-                            <div id="servicios-card" class="card-body">
-                                <h3 id="titulo2">Retoque de pestañas</h3>
-                                <h6 id="titulo2">Precio $270</h6>
-                                <p id="titulo2" class="card-text">Mantén tu aplicación siempre esponjosa con un retoque
-                                    de tu trabajo anterior. Se recomienda para personas que tienen dos semanas desde su
-                                    último servicio.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div id="Botones"  class="btn-group">
-                                        <a id="titulo2" class="btn btn-outline-dark" href="cita.html">Haz tu
-                                            cita</a>
-                                        <button id="titulo2" type="button" class="btn btn-sm btn-dark">Tiempo estimado 1.5
-                                            hrs</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- ----------------------------Termina el segundo servicio ----------------------------->
 
+            <!------------------------------Tercer servicio ------------------------------------------>
+            <div class="col-md-6 col-lg-4">
+              <div class="card mb-4 box-shadow">
+                <img
+                  class="card-img-top"
+                  alt="Técnica Volumen ligero"
+                  src="/assets/serviciosImg/megavolumen.jpg"
+                />
+                <div id="servicios-card" class="card-body">
+                  <h4 id="titulo2">Técnica Volumen ligero</h4>
+                  <h6 id="titulo2">Precio $650</h6>
+                  <p id="titulo2" class="card-text">
+                    Recomendado para pestañas escasas en busca de resultados
+                    llamativos, y para pestañas pobladas que busquen un look más
+                    intenso en la mirada
+                  </p>
+                  <h6>Tiempo estimado 3 hrs.</h6>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="card-btn">
+                      <a
+                        id="titulo2"
+                        class="btn btn-outline-dark"
+                        href="/pages/cita.html"
+                        >Haz tu cita</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- -------------------------------Termina el tercer servicio----------------------------- -->
+
+            <!-- Cuarto servicio -->
+            <div class="col-md-6 col-lg-4">
+              <div class="card mb-4 box-shadow">
+                <img
+                  class="card-img-top"
+                  alt="Técnica Mega-Volumen"
+                  src="/assets/serviciosImg/mega-volumen.jpg"
+                />
+                <div id="servicios-card" class="card-body">
+                  <h4 id="titulo2">Técnica Mega-Volumen</h4>
+                  <h6 id="titulo2">Precio $800</h6>
+                  <p id="titulo2" class="card-text">
+                    Recomendado para personas que busquen resultados dramáticos.
+                    Si lo que quieres son efectos especiales o colores, esta es
+                    tu técnica.
+                  </p>
+                  <h6>Tiempo estimado 3 hrs.</h6>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="card-btn">
+                      <a
+                        id="titulo2"
+                        class="btn btn-outline-dark"
+                        href="/pages/cita.html"
+                        >Haz tu cita</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- ----------------------------------Termina el cuarto servicio------------------------- -->
+
+            <!-- ----------------------------------Quinto servicio -------------------------------------->
+            <div class="col-md-6 col-lg-4">
+              <div class="card mb-4 box-shadow">
+                <img
+                  class="card-img-top"
+                  alt="Retiro de pestañas"
+                  src="/assets/serviciosImg/retiro.jpg"
+                />
+                <div id="servicios-card" class="card-body">
+                  <h4 id="titulo2">Retiro de pestañas</h4>
+                  <h6 id="titulo2">Precio $180</h6>
+                  <p id="titulo2" class="card-text">
+                    Si buscas descansar de las extensiones, la mejor manera es
+                    con un retiro profesional, que cuide la piel de tus ojos y
+                    la estructura de tu pestaña natural.
+                  </p>
+                  <h6>Tiempo estimado 1.5 hrs.</h6>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="card-btn">
+                      <a
+                        id="titulo2"
+                        class="btn btn-outline-dark"
+                        href="/pages/cita.html"
+                        >Haz tu cita</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- ----------------------------------Termina el quinto servicio ----------------------------->
+
+            <!--------------------------------------- Sexto servicio -------------------------------------->
+            <div class="col-md-6 col-lg-4">
+              <div class="card mb-4 box-shadow">
+                <img
+                  class="card-img-top"
+                  alt="Retoque de pestañas"
+                  src="/assets/serviciosImg/retoque.jpg"
+                />
+                <div id="servicios-card" class="card-body">
+                  <h4 id="titulo2">Retoque de pestañas</h4>
+                  <h6 id="titulo2">Precio $270</h6>
+                  <p id="titulo2" class="card-text">
+                    Mantén tu aplicación siempre esponjosa con un retoque de tu
+                    trabajo anterior. Se recomienda para personas que tienen dos
+                    semanas desde su último servicio.
+                  </p>
+                  <h6>Tiempo estimado 1.5 hrs.</h6>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="card-btn">
+                      <a
+                        id="titulo2"
+                        class="btn btn-outline-dark"
+                        href="/pages/cita.html"
+                        >Haz tu cita</a
+                      >
                     </div>
                   </div>
                 </div>
