--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -51,7 +51,7 @@
                                 <div class="d-flex justify-content-between align-items-center">
                                     
 <div id="Botones" class="btn-group">
-                                        <a id="titulo2" class="btn btn-outline-dark" href="/Pages/cita.html">Haz tu
+                                        <a id="titulo2" class="btn btn-outline-dark" href="/pages/cita.html">Haz tu
                                             cita</a>
                                         <button id="titulo2" type="button" class="btn btn-sm btn-dark">Tiempo estimado 2
                                             hrs.</button>
